添加仓库地址

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@h1ve2/pixi-canvaspool",
   "version": "0.1.0",
   "type": "module",
+  "repository": "https://github.com/h1ve2/pixi-canvaspool",
   "exports": {
     ".": {
       "import": "./dist/index.js",
