更新homepage和repository字段

--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "@h1ve2/pixi-canvaspool",
   "version": "0.1.0",
   "type": "module",
-  "repository": "https://github.com/h1ve2/pixi-canvaspool",
+  "homepage": "https://github.com/h1ve2/pixi-canvaspool",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/h1ve2/pixi-canvaspool.git"
+  },
   "exports": {
     ".": {
       "import": "./dist/index.js",
